<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="72dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/dice_val_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey1"
            android:padding="16dp"/>

        <ImageButton
            android:id="@+id/dice_val_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey2"
            android:padding="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/dice_val_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey3"
            android:padding="16dp" />

        <ImageButton
            android:id="@+id/dice_val_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey4"
            android:padding="16dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/dice_val_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey5"
            android:padding="16dp" />

        <ImageButton
            android:id="@+id/dice_val_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/grey6"
            android:padding="16dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/remaining_rolls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remaining_rolls"
                android:gravity="center_horizontal"
                android:padding="24dp"
                />

            <Button
                android:id="@+id/roll_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/roll_button"
                android:padding="16dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/select_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_button" />

            <Spinner
                android:id="@+id/play_select_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingEnd="8dp"
                android:paddingBottom="8dp" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_score"
        android:paddingTop="56dp" />


</LinearLayout>